updates to playbooks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,8 @@ inventory = inventory
 roles_path = roles
 display_skipped_hosts = false
 any_errors_fatal = true
+
+#[ssh_connection]
+#pipelining = True
+#control_path = /tmp/ansible-ssh-%%h-%%p-%%r
+#ssh_args = -C -o ControlMaster=auto -o ControlPersist=1800
