--- a/roles/repos/tasks/main.yaml
+++ b/roles/repos/tasks/main.yaml
@@ -13,16 +13,16 @@
   yum_repository:
     name: docker-ce
     description: docker-ce stable repo
-    baseurl: https://download.docker.com/linux/centos/7/$basearch/stable
-    gpgkey: https://download.docker.com/linux/centos/gpg
-    gpgcheck: yes
-    proxy: "http://127.0.0.1:8888"
+    baseurl: https://pkgs.domain.local/linux/docker-ce/
+    gpgcheck: no
+    sslverify: no
+    enabled: false
 
 - name: Add kubernetes repo
   yum_repository:
     name: kubernetes
     description: Kubernetes repo
-    baseurl: https://packages.cloud.google.com/yum/repos/kubernetes-el7-$basearch
-    gpgkey: https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-    gpgcheck: yes
-    proxy: "http://127.0.0.1:8888"
+    baseurl: https://pkgs.domain.local/linux/kubernetes/yum/repos/kubernetes-el7-$basearch
+    gpgcheck: no
+    sslverify: no
+    enabled: false
