--- a/roles/docker/tasks/main.yaml
+++ b/roles/docker/tasks/main.yaml
@@ -5,36 +5,10 @@
   with_items:
     - device-mapper-persistent-data
     - lvm2
-  
-- name: Install Docker-CE engine
-  yum: 
-    name: docker-ce-{{ docker_version }}
-    state: installed     
 
-- name: Create /etc/docker/ folder
-  file:
-    path: "/etc/docker/ "
-    state: directory
-    owner: "root"
-
-- name: Configure additional engine options
-  copy:
-    content: "{{ docker_ce_daemon_options | to_nice_json }}"
-    dest: /etc/docker/daemon.json
-    mode: 0644
-  when: docker_ce_daemon_options is defined
-
-- name: Create Docker HTTP Proxy config file
-  blockinfile:
-    path: /etc/systemd/system/docker.service.d/http_proxy.conf
-    create: yes
-    block: |
-        [Service]
-        Environment="HTTPS_PROXY=http://127.0.0.1:8888/" "NO_PROXY=localhost,127.0.0.1,10.0.0.0"
-
-- name: restart docker
-  systemd: 
-    name: docker 
-    state: restarted
-    daemon_reload: yes
-    enabled: yes
+- name: Install docker on hosts sequentially
+  include_tasks: "install_docker.yaml"
+  with_items: "{{ groups['k8s-nodes'] }}"
+  when: "hostvars[host_item].inventory_hostname == inventory_hostname"
+  loop_control:
+      loop_var: host_item
