--- a/roles/local-storage-provisioner/tasks/main.yaml
+++ b/roles/local-storage-provisioner/tasks/main.yaml
@@ -1,13 +1,9 @@
 
-- name: Docker Pull Container Images
-  shell: docker pull {{ local_volume_provisioner_image }}
-  delegate_to: "{{ item }}"
-  with_items: "{{ groups['k8s-workers'] }}"
-
 - name: copy local-storage-provisioner manifests
   template:
     src: local-storage-provisioner.yaml
     dest: /tmp/local-storage-provisioner.yaml
+    force: yes
 
 - name: Create Local Storage Provisioner Deployments
   shell: kubectl apply -f /tmp/local-storage-provisioner.yaml
